Add more debug logs